service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-Service
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
